LWCLearnwithFLOWOrg/force-app/main/default/objects/Champion__c/Champion__c.object-meta.xml
<CustomObject>
    <description>SF-85: Champions identified during the customer setup process</description>
    <label>Champion</label>
    <nameField>
        <displayFormat>C-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Champions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>