LWCLearnwithFLOWOrg/force-app/main/default/objects/Champion__c/fields/Contact_on_Account__c.field-meta.xml
<CustomField>
    <fullName>Contact_on_Account__c</fullName>
    <formula>IF(NOT( ISBLANK(Contact__c) ), 
HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Contact__r.AccountId , Contact__r.Account.Name,&quot;_blank&quot;), Null)</formula>
    <label>Contact on Account</label>
    <type>Text</type>
</CustomField>