LWCLearnwithFLOWOrg/force-app/main/default/objects/Champion__c/fields/Customer_Setup__c.field-meta.xml
<CustomField>
    <fullName>Customer_Setup__c</fullName>
    <label>Customer Setup</label>
    <referenceTo>Customer_Setup__c</referenceTo>
    <relationshipLabel>Champions</relationshipLabel>
    <relationshipName>Champions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>